#915 fixed unaligned text in search field

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -3158,7 +3158,7 @@ div.pass-hint {
     padding:0px 2px;
     vertical-align: middle;
     width: 217px;
-    line-height: 32px;
+/*    line-height: 32px;*/
     height: 32px;
 }
 
